--- a/info.yaml
+++ b/info.yaml
@@ -2,7 +2,7 @@
 project:
   title:        "inv"      # Project title
   author:       "thiago"      # Your name
-  discord:      "   "      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  discord:      "discord"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  "inverte o sinal ui_in"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
@@ -50,6 +50,15 @@ pinout:
   uio[5]: ""
   uio[6]: ""
   uio[7]: ""
+
+# Documentation section
+documentation:
+  title: "DocumentaçãodoProjeto"
+  author: "SeuNome"  # Nome do autor ou autores da documentação
+  readme: "README.md"  # Caminho para o arquivo README do projeto
+  any_other_files:
+    - "docs/info.md"  # Adicionando info.md localizado na pasta docs
+
 
 # Do not change!
 yaml_version: 6
